# IronLEG

./: .gitignore  Cargo.toml
interface/: Cargo.toml
interface/src/: main.rs
interface/static/: index.html  main.js
memory/: Cargo.toml
memory/src/: cache.rs  lib.rs  ram.rs  transparency.rs
simulator/: Cargo.toml
simulator/src/: assembler.rs  lib.rs  memory.rs  processor.rs
simulator/src/memory/: cache.rs  mod.rs  ram.rs  transparency.rs
simulator/src/processor/: instruction.rs  mod.rs  pipeline.rs  predictor.rs  registers.rs  stages.rs
simulator/tests/: memory_tests.rs
