[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulator = { path = "../simulator" }
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = "0.6.2"